Fixing email body area padding; hiding right pane scrollbar when not needed

--- a/web-ui/app/scss/_read.scss
+++ b/web-ui/app/scss/_read.scss
@@ -56,6 +56,10 @@
   }
 }
 
+.bodyArea {
+  padding: 35px 30px 0 30px;
+}
+
 #mail-actions {
   text-align: right;
   padding: 10px 0;
