--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -328,6 +328,7 @@ section {
     top: -25px;
     box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.12);
     z-index: 2;
+    overflow-y: auto;
     @include read-msg;
     [id^=fullView-] {
       position: relative;
